# OndaBack

./: .gitignore  README.md  manage.py  memo.txt  pyproject.toml  requirements.txt
.github/COMMIT_TEMPLATE/: commit_template.txt
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  deployment.yml  documentation.yml  refactor.yml  testing.yml
.github/workflows/: CICD.yml
apps/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_remove_groupchatmembership_joined_at_and_more.py
apps/leaders/: apps.py  models.py  serializers.py  urls.py  views.py
apps/meet/: models.py  serializers.py  urls.py  views.py
apps/options/: admin.py  urls.py
apps/options/models/: area.py  (+5 more)
apps/posts/: models.py  serializers.py  urls.py  views.py
apps/reviews/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/upload/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/user/: admin.py  admin_serializers.py  admin_urls.py  admin_views.py  models.py  oauth_mixins.py  oauth_views.py  oauth_views_test.py  serializers.py  urls.py  views.py
config/: asgi.py  schema.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  prod.py  settings.py
config/urls/: urls.py  urls_dev.py  urls_prod.py
meet/: serializers.py  urls.py
resources/fixtures/: age_groups.json  areas.json  categories.json  digital_levels.json  interests.json
templates/: email_verification_result.html
utils/: jwt_serializers.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py
utils/responses/: reviews.py  user.py
(+90 files in other folders)
